<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.registrarconductor.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.registrarconductor.ui.inspector.InpesctorFragment"
        android:label="@string/menu_inspector"
        tools:layout="@layout/fragment_inspector" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.registrarconductor.ui.conductor.ConductorFragment"
        android:label="@string/menu_conductor"
        tools:layout="@layout/fragment_conductor" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.registrarconductor.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.registrarconductor.ui.estadisticas.EstadisticasFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_estadisticas" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.registrarconductor.ui.informes.InformesFragment"
        android:label="@string/menu_informe"
        tools:layout="@layout/fragment_informes" />
</navigation>